Added metadata.pageStatusCode and metadata.pageError properties to the responses
