# apps/api/src/lib/entities.ts
@@ -119,4 +119,7 @@ export class SearchResult {
 export interface FireEngineResponse {
   html: string;
   screenshot: string;
+  pageStatusCode?: number;
+  pageError?: string;
 }
+
